[package]
name = "wasm-service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
html-to-string-macro = "0.2.4"
matchit = "0.6.0"
once_cell = "1.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
http = "0.2.8"
http-serde = "1.1.2"
strum = { version = "0.24.1", features = ["derive"] }

[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true
